# CppMap

./: .clangd  .gitignore  CMakeLists.txt  frontend.rar
backend-py/: ai.py  main.py
frontend/: index.html  index2.html  map.css  map.js  map2.js  test.html  test2.html
include/: Map.h  Quadtree.h  Server.h  Utils.h
src/: Map.cpp  Quadtree.cpp  Server.cpp  Utils.cpp  main.cpp
web/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
web/src/: App.vue  constants.ts  main.ts  map.ts  styles.css  types.ts
web/src/components/: LocationShow.vue  MultiSelect.vue  Routes.vue  Tabs.vue
web/src/composables/: useCenter.ts  useMap.ts  useNearest.ts  usePath.ts  usePathLength.ts  usePin.ts
web/src/logic/: computeDays.ts  computeOptions.ts  fetchJson.ts  getCenter.ts  pathLength.ts
